# focus_client_rust

./: 1staudit.md  Cargo.toml  Commands.md  Context.md  Multithreaded_Dashboard.ino  README.md  ROADMAP-new.md  ROADMAP.md  Updated.md  apps.toml  build.rs  mock_esp32.py  roadmap.md  totem.cpp
Multithreaded_Dashboard/: M3-Redesign.ino  M3Design.md  Multithreaded_Dashboard.ino  test.html
hello_gpui/: Cargo.toml  steps.txt
hello_gpui/src/: main.rs
mock_server/: Cargo.toml
mock_server/src/: main.rs
src/: analytics.rs  automation.rs  config.rs  discovery.rs  main.rs  report.rs  session.rs  totem.rs
