[package]
name = "focus_client_rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "mock_server"]
resolver = "2"

[dependencies]
lazy_static = "1.5.0"
mdns-sd = "0.15.1" # For mDNS service discovery
reqwest = { version = "0.12.23", features = ["blocking"] } # For making HTTP requests
wallpaper = "3.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

# --- ADD THIS ENTIRE SECTION ---
[build-dependencies]
embed-manifest = "1.4.0"
